# Pelican-Blog

./: README.md  pelicanconf.py  publishconf.py  pyproject.toml
content/: 2017-01-21.md  2017-02-05.md  2017-11-11.md  2017-11-20.md  2018-02-12-pelican-quickstart.md  2018-02-27-firstmozamu.md  2018-03-21-recoveringcommit.md  2018-03-31-gsoc2018part1.md  2018-04-10-google-udacity-collaborative-project.md  2018-04-30-gsoc2018part2.md  2018-05-03-pydelhi-dev-sprint.md  2018-05-28-gsoc2018-week-1-and-2.md  2018-06-04-gsoc2018-week-3.md  2018-06-12-gsoc2018-week-4.md  2018-06-20-gsoc2018-week-5.md  2018-08-10-gsoc2018-final-report.md  2019-04-20-debutsav-delhi-event-report.md  whatiread.md
docs/: CNAME  Migrating-data-between-different-machines-with-scp.html  PyDelhi-Ilugd-LinuxChixIndia-Meetup-as-it-happened-on-5th-February-2017.html  PyDelhi-Meetup-The-Tale-Of-21st-January-2017.html  Python-Game-Challenge-by-PyDelhi.html  archives.html  authors.html  categories.html  event-report-for-debutsav-delhi-2019.html  google-udacity-scholarship.html  gsoc-2018-blog-1-from-preparations-to-debian-proposal.html  gsoc-2018-blog-2-the-application-task-and-results.html  gsoc-2018-final-report.html  gsoc-2018-week-1-and-2.html  gsoc-2018-week-3.html  gsoc-2018-week-4.html  gsoc-2018-week-5.html  index.html  index2.html  mozamu-my-first-visit-to-amu-and-first-talk-for-mozilla.html  pydelhi-dev-sprints-28th-april-2018.html  recovering-commit-after-git-reset--hard.html  tags.html  what-pelican-quickstart-actually-do-and-how-it-does-that.html
output/: Python-Game-Challenge-by-PyDelhi.html  (+22 more)
(+135 files in other folders)
