[project]
name = "blog"
version = "0.1.0"
description = "My thoughts as they come."
authors = [
    {name = "realslimshanky"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "pelican[markdown] (>=4.11.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
